@@ -28,6 +28,7 @@ enum _eTimerType
 	TTYPE_ONTIME,
 	TTYPE_BEFORESUNSET,
 	TTYPE_AFTERSUNSET,
+	TTYPE_ONTIMERANDOM,
 	TTYPE_END
 };
 
